# strong_shortner

./: .coveragerc  ABOUT.md  BRANCHING.md  DEMO.md  DEPLOY.md  DEPLOY_DIGITAL_OCEAN.md  DEPLOY_VULTR.md  DOCKER_SETUP.md  Dockerfile  FRONTEND_DEMO.md  LIVE_DEMO.md  LIVE_DEMO_EN.md  Makefile  README.md  README_DEMO_EN.md  debug_ssh.sh  docker-compose.chaos-full.yml  docker-compose.chaos.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fix-server.sh  import_csv.py  init_db.py  load_test.js  migrations.py  nginx.conf  pyproject.toml  reset-and-deploy.sh  reset-db.sh  setup-server.sh  setup_quest_tools.sh  swagger.yaml
app/: __init__.py  database.py  logging_config.py
docs/: BACKWARD_COMPATIBILITY.md  CHAOS_MODE.md  ERROR_HANDLING.md  EVIDENCE.md  FAILURE_MODES.md  GRACEFUL_FAILURE.md  INTEGRATION_TESTING.md  RELIABILITY_QUEST_SUBMISSION.md  SCALABILITY.md
migrations/: 20240101_000000_example_add_user_profile.py
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
scripts/: chaos-demo-with-watcher.sh  chaos-kill-process.sh  chaos-live-demo.sh  chaos-test-remote.sh  chaos-test.sh  demo-503-graceful.sh  demo-chaos-mode-macos.sh  demo-chaos-mode.sh  demo-graceful-failure.sh  demo-service-unavailable.sh  full-demo.sh  scalability-bronze.sh  scalability-concurrent-50.sh  scalability-endpoint-50.sh  scalability-real-world.sh  scalability-silver-200.sh  test_graceful_failure.sh  verify-restart-policy.sh
seed_data/: events.csv  urls.csv  users.csv
tests/: README.md  conftest.py  load_test_simple.js  test_events.py  test_health.py  (+2 more)
(+12 files in other folders)
