[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faker>=33.0",
    "flask>=3.1",
    "gunicorn>=23.0",
    "peewee>=3.17",
    "prometheus-client>=0.24.1",
    "prometheus-flask-exporter>=0.23",
    "psycopg2-binary>=2.9",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0",
    "python-json-logger>=2.0",
    "redis>=7.4.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "locust>=2.43.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-flask>=1.3.0",
]
